[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Other/treasure.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enviroment/treasure1.tres" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 150, 120 )

[sub_resource type="Curve" id=17]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 17 )

[sub_resource type="Curve" id=18]
_data = [ Vector2( 0, 0 ), 0.0, 11.9341, 0, 0, Vector2( 0.264045, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.30992, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=19]
lifetime_randomness = 0.75
emission_shape = 2
emission_box_extents = Vector3( 75, 12, 1 )
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
gravity = Vector3( 0, -25, 0 )
angular_velocity = -420.59
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 10.02
radial_accel_random = 1.0
radial_accel_curve = SubResource( 16 )
scale = 0.2
scale_random = 0.5
scale_curve = SubResource( 20 )

[node name="treasure" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -29 )
shape = SubResource( 1 )

[node name="BreathParticles2D" type="Particles2D" parent="."]
light_mask = 3
position = Vector2( 0, -17 )
z_index = 1
emitting = false
amount = 32
lifetime = 3.25
one_shot = true
speed_scale = 0.8
explosiveness = 1.0
randomness = 0.83
fixed_fps = 60
visibility_rect = Rect2( -1250, -1250, 2500, 2500 )
local_coords = false
process_material = SubResource( 19 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="waitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_treasure_body_entered"]
[connection signal="timeout" from="waitTimer" to="." method="_on_waitTimer_timeout"]
